api routes cleanup, HttpsProtocol.php, Setup.php Command
