# app/Http/Controllers/Api/v1/CampusController.php
@@ -4,17 +4,43 @@ namespace App\Http\Controllers\Api\v1;
 
 use App\Campus;
 use Illuminate\Http\Request;
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Bus\DispatchesJobs;
+use Illuminate\Foundation\Validation\ValidatesRequests;
+use Laravel\Passport\HasApiTokens;
+
 
 class CampusController extends ApiController
 {
+
+    use HasApiTokens, DispatchesJobs, ValidatesRequests;
+
     /**
      * Display a listing of the resource.
      *
      * @return \Illuminate\Http\Response
+     *
+     * @SWG\Get(
+     *     path="/api/v1/campus",
+     *     summary="get all campuses",
+     *     tags={"Campus"},
+     *     description="Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.",
+     *     operationId="findPetsByTags",
+     *     produces={"application/json"},
+     *     @SWG\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @SWG\Schema(
+     *             type="object",
+     *             @SWG\Items(ref="#/definitions/Pet")
+     *         ),
+     *     ),
+     *     deprecated=false
+     * )
      */
     public function index()
     {
-        //
+        return Campus::all();
     }
 
     /**
@@ -35,7 +61,13 @@ class CampusController extends ApiController
      */
     public function store(Request $request)
     {
-        //
+       $this->validate($request, [
+        'name' => 'required|unique:campus',
+        'campus_code' => 'required|unique:campus',
+        ]);
+
+        $campus = Campus::create($request->all());
+        return $campus;
     }
 
     /**
@@ -81,5 +113,10 @@ class CampusController extends ApiController
     public function destroy(Campus $campus)
     {
         //
+    }
+
+    protected function formatValidationErrors(Validator $validator)
+    {
+        return $validator->errors()->all();
     }
 }
