# routes/api.php
@@ -13,26 +13,27 @@ use Illuminate\Http\Request;
 |
 */
 
-// Route::middleware('auth:api')->get('/user', function (Request $request) {
-//     return $request->user();
-// });
+Route::middleware('auth:api')->get('/user', function (Request $request) {
+    return $request->user();
+});
 
 // Route::middleware('auth:api')->get('/users', function (Request $request) {
 //     return App\User::all();
 // });
 
-Route::group(['prefix' => 'v1','namespace' => 'Api\v1'], function () {
-    Route::middleware('auth:api')->resource('user', 'UserController');
-    Route::middleware('auth:api')->resource('asset', 'AssetController');
-    Route::middleware('auth:api')->resource('campus', 'CampusController');
-    Route::middleware('auth:api')->resource('building', 'BuildingController');
-    Route::middleware('auth:api')->resource('room', 'RoomController');
-    Route::middleware('auth:api')->resource('software', 'SoftwareController');
-    Route::middleware('auth:api')->resource('support', 'SupportController');
-    Route::middleware('auth:api')->resource('category', 'CategoryController');
-    Route::middleware('auth:api')->resource('properties', 'PropertiesController');
-    Route::middleware('auth:api')->resource('asset-property-name', 'AssetPropertyNameController');
-    Route::middleware('auth:api')->resource('media', 'MediaController');
+Route::group(['middleware' => 'auth:api', 'prefix' => 'v1','namespace' => 'Api\v1'], function () {
+// Route::group(['prefix' => 'v1','namespace' => 'Api\v1'], function () {
+    Route::resource('user', 'UserController');
+    Route::resource('asset', 'AssetController');
+    Route::resource('campus', 'CampusController');
+    Route::resource('building', 'BuildingController');
+    Route::resource('room', 'RoomController');
+    Route::resource('software', 'SoftwareController');
+    Route::resource('support', 'SupportController');
+    Route::resource('category', 'CategoryController');
+    Route::resource('properties', 'PropertiesController');
+    Route::resource('asset-property-name', 'AssetPropertyNameController');
+    Route::resource('media', 'MediaController');
 });
 
 
