# storage/api-docs/api-docs.json
@@ -15,7 +15,7 @@
                 "tags": [
                     "Asset"
                 ],
-                "summary": "Finds Pets by tags",
+                "summary": "get all Assets",
                 "description": "Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.",
                 "operationId": "findPetsByTags",
                 "produces": [
@@ -59,29 +59,16 @@
                 ]
             }
         },
-        "/api/v1/example": {
+        "/api/v1/campus": {
             "get": {
                 "tags": [
-                    "Example"
+                    "Campus"
                 ],
-                "summary": "Finds Pets by tags",
+                "summary": "get all campuses",
                 "description": "Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.",
                 "operationId": "findPetsByTags",
                 "produces": [
                     "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "tags",
-                        "in": "query",
-                        "description": "Tags to filter by",
-                        "required": true,
-                        "type": "array",
-                        "items": {
-                            "type": "string"
-                        },
-                        "collectionFormat": "multi"
-                    }
                 ],
                 "responses": {
                     "200": {
@@ -92,87 +79,9 @@
                                 "$ref": "#/definitions/Pet"
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Invalid tag value"
                     }
                 },
-                "deprecated": false,
-                "security": [
-                    {
-                        "petstore_auth": [
-                            "write:pets",
-                            "read:pets"
-                        ]
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "Example"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "An example resource"
-                    }
-                }
-            }
-        },
-        "/api/v1/example/create": {
-            "get": {
-                "tags": [
-                    "Example"
-                ],
-                "summary": "Show the form for creating a new resource.",
-                "responses": {
-                    "200": {
-                        "description": "An example resource"
-                    }
-                }
-            }
-        },
-        "/api/v1/example/{id}": {
-            "get": {
-                "tags": [
-                    "Example"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "An example resource"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Example"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "An example resource"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Example"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "An example resource"
-                    }
-                }
-            }
-        },
-        "/api/v1/example/{id}/edit": {
-            "get": {
-                "tags": [
-                    "Example"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "An example resource"
-                    }
-                }
+                "deprecated": false
             }
         }
     },
